# crm-backend

./: .gitignore  README.md  env.example  index.html  package-lock.json  package.json  server.js
ai-integration/: ai.py  main.py  pyproject.toml  requirements.txt  test.ipynb
config/: auth.js  dbConnection.js
controller/: aiController.js  campaignController.js  customerController.js  orderController.js
middleware/: isLoggedIn.js
models/: campaignModel.js  communicationLogModel.js  customerModel.js  orderModel.js
routes/: aiRoutes.js  authGoogle.js  campaignRouter.js  customerRoutes.js  dashboardRoute.js  dummyVendorApi.js  loginRoute.js  orderRoutes.js
scripts/: seed.js
